test/parse/module/bad-element-followed-by-illegal-expression.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-gc
;;; ERROR: 1
( elem f64 ( ) ) 
(;; STDERR ;;;
out/test/parse/module/bad-element-followed-by-illegal-expression.txt:4:12: error: unexpected token (, expected ).
( elem f64 ( ) ) 
           ^
;;; STDERR ;;)
